# spec-driven-project

./: .coverage  .env  .gitignore  Dockerfile  README.md  alembic.ini  build.gradle  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.gradle
.claude/: settings.json
.github/workflows/: ci.yml
.openspec-cli/: .enriched-content.md.applied  .fix-prompt.md  .last-prompt.md  .pr-diff.patch  .review-output.md  .review-output.md.applied  README.md
.openspec-cli/commands/: os-enrich-apply  os-plan  os-review  os-review-apply
.openspec-cli/lib/: install.sh  jira.sh  vault_lint.py
ai-specs/.agents/: backend-developer.md
ai-specs/.commands/: enrich-us.md  plan-backend-ticket.md
ai-specs/specs/: api-spec.yml  backend-standards.mdc  development_guide.md
alembic/: env.py
alembic/versions/: 001_initial_health_table.py
contracts/: current_account.py  fixed_term_deposit.py
openspec/: config.yaml
src/application/dto/: health_dto.py
src/application/mappers/: health_mapper.py
src/application/services/: health_service.py
src/domain/exceptions/: health_exceptions.py
src/domain/models/: health.py
src/domain/repositories/: health_repository.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: engine.py
src/infrastructure/repositories/: health_repository_impl.py
tests/: conftest.py  test_current_account.py  test_fixed_term_deposit.py  test_vault_lint.py
tests/e2e/: test_full_health_flow.py
tests/integration/: test_health_endpoints.py
tests/unit/: test_health_service.py
(+10 files in other folders)
