[project]
name = "openspec-fastapi-base"
version = "0.1.0"
description = "OpenSpec Python FastAPI base application template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.32",
    "asyncpg>=0.28.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.11.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.22.0",
    "aiosqlite>=0.18.0",
    "httpx>=0.27.0",
    "pytest-cov>=4.1.0"
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = 3.12
strict = true
files = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "C90", "B", "B9", "Q"]
